# onos

./: .bazelignore  .bazelrc  .bazelversion  .buckconfig  .dockerignore  .gitignore  .gitignore.bak  .gitreview  BUCK  BUILD  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  RELEASES.md  Releasing.md  WORKSPACE  WORKSPACE-docker  circle.yml  features.xml  modules.bzl  modules.defs  onos.defs  onosinstallhelper.sh  pom.xml  tsconfig.json
apps/yang-gui/yang-gui2-lib/: BUILD.bazel  public_api.ts  test.ts
apps/yang-gui/yang-gui2-lib/lib/: yang-gui2-lib.module.ts
apps/yang-gui/yang-gui2-lib/lib/yangdetails/: yangdetails.component.html  yangdetails.component.scss  yangdetails.component.spec.ts  yangdetails.component.ts  yangdetails.theme.scss
apps/yang-gui/yang-gui2-lib/lib/yangtable/: yangtable.component.html  yangtable.component.scss  yangtable.component.spec.ts  yangtable.component.ts  yangtable.theme.scss
web/gui2-fw-lib/: .gitignore  BUILD  BUILD.bazel  README.md  angular-metadata.tsconfig.json  angular.json  index.ts  ng-test.sh  package-lock.json  package.json  tsconfig.json  tslint.json
web/gui2-fw-lib/environments/: environment.ts
web/gui2-fw-lib/lib/: consolelogger.service.ts  detectbrowser.directive.spec.ts  detectbrowser.directive.ts  gui2-fw-lib.module.ts
web/gui2-fw-lib/lib/layer/: dialog.theme.css  panel.service.ts
web/gui2-fw-lib/lib/layer/confirm/: confirm.component.css
web/gui2-fw-lib/lib/layer/flash/: flash.component.css  flash.component.spec.ts
web/gui2-fw-lib/lib/layer/loading/: loading.component.css  loading.component.spec.ts  loading.component.ts
web/gui2-fw-lib/lib/layer/quickhelp/: quickhelp.component.ts
web/gui2-fw-lib/lib/layer/veil/: veil.component.html  veil.component.theme.css  veil.component.ts
web/gui2-fw-lib/lib/mast/: mast.service.ts
web/gui2-fw-lib/lib/mast/mast/: mast.component.css  mast.component.spec.ts  mast.component.ts
web/gui2-fw-lib/lib/nav/: nav.service.ts
web/gui2-fw-lib/lib/remote/: urlfn.service.ts  websocket.service.ts  wsock.service.ts
web/gui2-fw-lib/lib/svg/: glyph.service.spec.ts  glyph.service.ts  icon.service.spec.ts  icon.service.ts  svgutil.service.spec.ts  svgutil.service.ts  zoomable.directive.spec.ts  zoomable.directive.ts  zoomutils.ts
web/gui2-fw-lib/lib/svg/icon/: glyph-theme.css  glyph.css  icon.component.spec.ts  icon.component.ts  icon.theme.css  tooltip.css
web/gui2-fw-lib/lib/util/: fn.service.spec.ts  fn.service.ts  keys.service.spec.ts  keys.service.ts  prefs.service.spec.ts  prefs.service.ts  theme.service.spec.ts
web/gui2-fw-lib/lib/util/name-input/: name-input.component.css
web/gui2-fw-lib/lib/widget/: detailspanel.base.ts  panel.base.ts  table.base.ts  tablefilter.pipe.ts
web/gui2-fw-lib/projects/gui2-fw-lib/: README.md  ng-package.json  ng-package.prod.json  noBUILD.bazel  package.json  tsconfig.json  tsconfig.lib.json
web/gui2-fw-lib/projects/gui2-fw-lib/src/: public_api.ts  test.ts
web/gui2-fw-lib/projects/gui2-fw-lib/src/environments/: environment.prod.ts
web/gui2-fw-lib/projects/gui2-fw-lib/src/lib/: consolelogger.service.spec.ts  consolelogger.service.ts  gui2-fw-lib.module.ts  log.service.spec.ts  log.service.ts  onos.service.ts
web/gui2-fw-lib/src/: index.html  karma.conf.js  main.ts  noBUILD.bazel  polyfills.ts  rxjs_shims.js  test.ts
web/gui2-fw-lib/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
web/gui2-fw-lib/src/environments/: environment.prod.ts  environment.ts
web/gui2-topo-lib/: .gitignore  BUILD  BUILD.bazel  README.md  angular.json  ng-test.sh  package-lock.json  package.json  test.ts  tsconfig.json  tslint.json
web/gui2-topo-lib/lib/: gui2-topo-lib.module.ts  layout.service.spec.ts  layout.service.ts  topology.service.spec.ts  topology.service.ts  topology.theme.css  traffic.service.spec.ts  traffic.service.ts
web/gui2-topo-lib/lib/layer/: viewcontroller.ts
web/gui2-topo-lib/lib/layer/backgroundsvg/: backgroundsvg.component.spec.ts  backgroundsvg.component.ts
web/gui2-topo-lib/lib/layer/forcesvg/: forcesvg.component.html  forcesvg.component.spec.ts  forcesvg.component.ts
web/gui2-topo-lib/lib/layer/forcesvg/draggable/: draggable.directive.spec.ts  draggable.directive.ts
web/gui2-topo-lib/lib/layer/forcesvg/models/: force-directed-graph.spec.ts  force-directed-graph.ts  link.ts  node.ts
web/gui2-topo-lib/lib/layer/forcesvg/tests/: topo2Highlights-base-data.json  (+1 more)
web/gui2-topo-lib/lib/layer/gridsvg/: gridsvg.component.css
web/gui2-topo-lib/lib/layer/mapsvg/: mapsvg.component.css  mapsvg.component.html  mapsvg.component.spec.ts  mapsvg.component.ts
web/gui2-topo-lib/lib/layer/nodeviceconnectedsvg/: nodeviceconnectedsvg.component.spec.ts  nodeviceconnectedsvg.component.ts
web/gui2-topo-lib/lib/panel/: topopanel.base.ts
web/gui2-topo-lib/lib/panel/details/: details.component.css  details.component.html  details.component.spec.ts  details.component.ts
web/gui2-topo-lib/lib/panel/instance/: instance.component.html  instance.component.spec.ts  instance.component.ts
web/gui2-topo-lib/lib/panel/mapselector/: mapselector.component.css  mapselector.component.html  mapselector.component.spec.ts  mapselector.component.ts
web/gui2-topo-lib/lib/panel/summary/: summary.component.spec.ts  summary.component.ts
web/gui2-topo-lib/lib/panel/toolbar/: toolbar.component.spec.ts  toolbar.component.ts  toolbar.theme.css
web/gui2-topo-lib/lib/topology/: topology.component.spec.ts  topology.component.ts
web/gui2-topo-lib/projects/gui2-topo-lib/: karma.conf.js  ng-package.json  package.json  tslint.json
web/gui2-topo-lib/projects/gui2-topo-lib/src/: public_api.ts
web/gui2-topo-lib/projects/gui2-topo-tester-e2e/src/: app.e2e-spec.ts
web/gui2-topo-lib/projects/gui2-topo-tester/src/: index.html  styles.css
web/gui2/src/main/webapp/: BUILD.bazel  error.html  index.html  initialize_testbed.ts  karma.conf.js  login.html  onos.dev.ts  onos.global.css  onos.prod.ts  onos.theme.css  onos.ts  rollup.config.js  rxjs_shims.js  terser.config.json  tsconfig.app.json  tsconfig.spec.json
(+25907 files in other folders)
